--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1><a class="title" href="https://ajzbc.com/firebase-url-shortener">Firebase URL Shortener</a></h1>
+        <p>A serverless url shortener made with Firebase</p>
     </header>
     <div class="wrap">
         <form> 
