--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <footer>
-        <p>Created by <a href="https://ajzbc.com">ajzbc</a>. Source code on <a href="https://github.com/ajzbc/firebase-url-shortener">GitHub</a></p>
+        <p>Created by <a href="https://ajzbc.com">Andrew Jazbec</a>. Source code on <a href="https://github.com/ajzbc/firebase-url-shortener">GitHub</a></p>
     </footer>
 </body>
 </html>
