--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <div class="wrap">
         <input id="url" type="url" placeholder="Long URL">
-        <input id="custom" type="type" placeholder="Custom Alias">
+        <input id="custom" type="type" placeholder="Custom Alias (OPTIONAL)">
         <button class="button" onclick="short()">Shorten</button>
         <p id="notice"></p>
         <div id="form">
